--- a/package.json
+++ b/package.json
@@ -21,9 +21,14 @@
     "expo-camera": "~16.0.17",
     "expo-secure-store": "~14.0.1",
     "expo-status-bar": "~2.0.1",
+    "link": "^2.1.1",
     "react": "18.3.1",
-    "react-native": "0.76.7",
+    "react-native": "^0.76.7",
+    "react-native-blur": "^3.2.2",
+    "react-native-camera": "^4.2.1",
     "react-native-linear-gradient": "^2.8.3",
+    "react-native-permissions": "^5.2.5",
+    "react-native-qrcode-scanner": "^1.5.5",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0"
   },
