--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,1 +1,2 @@
 <uses-permission android:name="android.permission.CAMERA" />
+<uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
