--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "main": "index.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.24.0",
+    "@react-native-community/blur": "^4.4.1",
     "@react-native-community/checkbox": "^0.5.17",
     "@react-native-firebase/app": "^21.11.0",
     "@react-native-firebase/messaging": "^21.11.0",
@@ -16,16 +18,18 @@
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/native-stack": "^7.2.0",
     "@react-navigation/stack": "^7.1.1",
+    "bookshelf": "file:",
     "expo": "~52.0.31",
     "expo-barcode-scanner": "^13.0.1",
     "expo-camera": "~16.0.17",
+    "expo-notifications": "~0.29.13",
     "expo-secure-store": "~14.0.1",
     "expo-status-bar": "~2.0.1",
+    "firebase": "^11.4.0",
     "link": "^2.1.1",
     "react": "18.3.1",
     "react-native": "^0.76.7",
-    "react-native-blur": "^3.2.2",
-    "react-native-camera": "^4.2.1",
+    "react-native-gesture-handler": "^2.24.0",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-permissions": "^5.2.5",
     "react-native-qrcode-scanner": "^1.5.5",
@@ -34,6 +38,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@react-native-community/cli": "^15.1.3",
     "expo-module-scripts": "^4.0.4"
   },
   "private": true
