--- a/app.json
+++ b/app.json
@@ -27,6 +27,9 @@
     "plugins": [
       "expo-secure-store",
       "expo-barcode-scanner"
+    ],
+    "permissions": [
+      "CAMERA"
     ]
   }
 }
