--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
     "expo": "~52.0.31",
     "expo-barcode-scanner": "^13.0.1",
     "expo-camera": "~16.0.17",
+    "expo-contacts": "~14.0.5",
+    "expo-doctor": "^1.12.7",
     "expo-secure-store": "~14.0.1",
+    "expo-sensors": "~14.0.2",
     "expo-status-bar": "~2.0.1",
     "link": "^2.1.1",
     "react": "18.3.1",
@@ -27,10 +30,11 @@
     "react-native-blur": "^3.2.2",
     "react-native-camera": "^4.2.1",
     "react-native-linear-gradient": "^2.8.3",
-    "react-native-permissions": "^5.2.5",
+    "react-native-permissions": "^2.2.0",
     "react-native-qrcode-scanner": "^1.5.5",
     "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "~4.4.0"
+    "react-native-screens": "~4.4.0",
+    "react-native-vision-camera": "^4.6.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
