--- a/package.json
+++ b/package.json
@@ -32,9 +32,14 @@
     "react-native-linear-gradient": "^2.8.3",
     "react-native-permissions": "^2.2.0",
     "react-native-qrcode-scanner": "^1.5.5",
+    "react-native-reanimated": "^3.17.1",
+    "react-native-reanimated-carousel": "^4.0.2",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
-    "react-native-vision-camera": "^4.6.4"
+    "react-native-snap-carousel": "^3.9.1",
+    "react-native-swiper": "^1.6.0",
+    "react-native-vision-camera": "^4.6.4",
+    "swiper": "^11.2.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
